docs/versions/v26.2.5/guide/evolve/annotation-processor/index.md
---
search: false
---

# Annotation Processor Guide

This guide describes the current annotation processor architecture in `framework/deployment`.

It focuses on the phased compiler path that replaced the old monolithic processor.

## Architecture Overview

The processor is organized as a compiler-style phase pipeline:

```mermaid
flowchart LR
    A["PipelineStepProcessor"] --> B["PipelineCompiler"]
    B --> P1["1 Discovery"]
    P1 --> P2["2 Model Extraction"]
    P2 --> P3["3 Runtime Mapping"]
    P3 --> P4["4 Semantic Analysis"]
    P4 --> P5["5 Target Resolution"]
    P5 --> P6["6 Binding Construction"]
    P6 --> P7["7 Generation"]
    P7 --> P8["8 Infrastructure"]
    P8 --> O["Generated Artifacts + Metadata"]
```

## Guide Contents

- [Phases and Flow](./phases-and-flow.md)
- [Models and Bindings](./models-and-bindings.md)
- [Generation and Rendering](./generation-and-rendering.md)
- [Current Architecture](./current-architecture.md)

## Entry Points

- `PipelineStepProcessor`: annotation processor facade.
- `PipelineCompiler`: phase orchestrator.
- `PipelineCompilationContext`: mutable phase handoff contract.

## Scope

This guide is canonical documentation for the current framework implementation.
